Fixed issues with Raziel running in docker compose

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -92,6 +92,7 @@ services:
       - BASICJWT_SIGNING_SECRET=${VAMPIRESQUID_SIGNING_SECRET}
       - DATABASE_ENVIRONMENT=production
       - HTTP_CONTEXT_PATH=${VAMPIRESQUID_HTTP_CONTEXT_PATH}
+      - LOGBACK_LEVEL=${LOGBACK_LEVEL}
       - ORG_MBARI_VARS_VAM_DATABASE_PRODUCTION_DRIVER=${VAMPIRESQUID_DATABASE_DRIVER}
       - ORG_MBARI_VARS_VAM_DATABASE_PRODUCTION_NAME=${VAMPIRESQUID_DATABASE_NAME}
       - ORG_MBARI_VARS_VAM_DATABASE_PRODUCTION_PASSWORD=${VAMPIRESQUID_DATABASE_PASSWORD}
@@ -155,6 +156,7 @@ services:
     environment:
       - ANNOTATION_SERVICE_URL=${CHARYBDIS_ANNOSAURUS_URL}
       - ANNOTATION_SERVICE_TIMEOUT=${CHARYBDIS_ANNOSAURUS_TIMEOUT}
+      - LOGBACK_LEVEL=${LOGBACK_LEVEL}
       - MEDIA_SERVICE_URL=${CHARYBDIS_VAMPIRESQUID_URL}
       - MEDIA_SERVICE_TIMEOUT=${CHARYBDIS_VAMPIRESQUID_TIMEOUT}
     networks:
@@ -173,14 +175,21 @@ services:
       - RAZIEL_JWT_SIGNING_SECRET=${RAZIEL_JWT_SIGNING_SECRET}
       - RAZIEL_MASTER_KEY=${RAZIEL_MASTER_KEY}
       - ANNOSAURUS_URL=${ANNOSAURUS_URL}
+      - ANNOSAURUS_INTERNAL_URL=${ANNOSAURUS_INTERNAL_URL}
       - ANNOSAURUS_SECRET=${ANNOSAURUS_CLIENT_SECRET}
       - CHARYBDIS_URL=${CHARYBDIS_URL}
+      - CHARYBDIS_INTERNAL_URL=${CHARYBDIS_INTERNAL_URL}
+      - LOGBACK_LEVEL=${LOGBACK_LEVEL}
       - PANOPTES_URL=${PANOPTES_URL}
+      - PANOPTES_INTERNAL_URL=${PANOPTES_INTERNAL_URL}
       - PANOPTES_SECRET=${PANOPTES_CLIENT_SECRET}
       - VAMPIRE_SQUID_URL=${VAMPIRE_SQUID_URL}
+      - VAMPIRE_SQUID_INTERNAL_URL=${VAMPIRE_SQUID_INTERNAL_URL}
       - VAMPIRE_SQUID_SECRET=${VAMPIRESQUID_CLIENT_SECRET}
       - VARS_KB_SERVER_URL=${VARS_KB_SERVER_URL}
+      - VARS_KB_SERVER_INTERNAL_URL=${VARS_KB_SERVER_INTERNAL_URL}
       - VARS_USER_SERVER_URL=${VARS_USER_SERVER_URL}
+      - VARS_USER_SERVER_INTERNAL_URL=${VARS_USER_SERVER_INTERNAL_URL}
       - VARS_USER_SERVER_SECRET=${VARS_USER_CLIENT_SECRET}
     networks:
       - m3
