mbari-org/vars-feedback#9 - Added beholder to docker stack

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -165,6 +165,20 @@ services:
     networks:
       - m3
 
+  beholder:
+    image: mbari/beholder
+    restart: always
+    ports:
+      - "${BEHOLDER_PORT}:8080"
+    environment:
+      - BEHOLDER_API_KEY=${BEHOLDER_API_KEY}
+      - BEHOLDER_CACHE_SIZE=${BEHOLDER_CACHE_SIZE}
+      - BEHOLDER_CACHE_FREEPCT=${BEHOLDER_CACHE_FREEPCT}
+    volumes:
+      - ${M3_HOST_DIR}/beholder/cache:/opt/beholder/cache
+    networks:
+      - m3
+
   charybdis:
     image: mbari/charybdis
     restart: always
@@ -191,28 +205,33 @@ services:
       - RAZIEL_HTTP_CONTEXT=${RAZIEL_HTTP_CONTEXT}
       - RAZIEL_JWT_SIGNING_SECRET=${RAZIEL_JWT_SIGNING_SECRET}
       - RAZIEL_MASTER_KEY=${RAZIEL_MASTER_KEY}
-      - ANNOSAURUS_URL=${ANNOSAURUS_URL}
       - ANNOSAURUS_INTERNAL_URL=${ANNOSAURUS_INTERNAL_URL}
       - ANNOSAURUS_SECRET=${ANNOSAURUS_CLIENT_SECRET}
       - ANNOSAURUS_TIMEOUT=${ANNOSAURUS_TIMEOUT}
-      - CHARYBDIS_URL=${CHARYBDIS_URL}
+      - ANNOSAURUS_URL=${ANNOSAURUS_URL}
+      - BEHOLDER_INTERNAL_URL=${BEHOLDER_INTERNAL_URL}
+      - BEHOLDER_SECRET=${BEHOLDER_API_KEY}
+      - BEHOLDER_TIMEOUT=${BEHOLDER_TIMEOUT}
+      - BEHOLDER_URL=${BEHOLDER_URL}
       - CHARYBDIS_INTERNAL_URL=${CHARYBDIS_INTERNAL_URL}
+      - CHARYBDIS_URL=${CHARYBDIS_URL}
       - LOGBACK_LEVEL=${LOGBACK_LEVEL}
-      - PANOPTES_URL=${PANOPTES_URL}
       - PANOPTES_INTERNAL_URL=${PANOPTES_INTERNAL_URL}
       - PANOPTES_SECRET=${PANOPTES_CLIENT_SECRET}
-      - VAMPIRE_SQUID_URL=${VAMPIRE_SQUID_URL}
+      - PANOPTES_URL=${PANOPTES_URL}
       - VAMPIRE_SQUID_INTERNAL_URL=${VAMPIRE_SQUID_INTERNAL_URL}
       - VAMPIRE_SQUID_SECRET=${VAMPIRESQUID_CLIENT_SECRET}
-      - VARS_KB_SERVER_URL=${VARS_KB_SERVER_URL}
+      - VAMPIRE_SQUID_URL=${VAMPIRE_SQUID_URL}
       - VARS_KB_SERVER_INTERNAL_URL=${VARS_KB_SERVER_INTERNAL_URL}
-      - VARS_USER_SERVER_URL=${VARS_USER_SERVER_URL}
+      - VARS_KB_SERVER_URL=${VARS_KB_SERVER_URL}
       - VARS_USER_SERVER_INTERNAL_URL=${VARS_USER_SERVER_INTERNAL_URL}
       - VARS_USER_SERVER_SECRET=${VARS_USER_CLIENT_SECRET}
+      - VARS_USER_SERVER_URL=${VARS_USER_SERVER_URL}
     networks:
       - m3
     depends_on:
       - annosaurus
+      - beholder
       - charybdis
       - panoptes
       - vampire-squid
