--- a/docker/nginx/conf/nginx.conf
+++ b/docker/nginx/conf/nginx.conf
@@ -75,6 +75,10 @@ http {
             proxy_pass http://annosaurus:8080/anno;
         }
 
+        location /capture {
+            proxy_pass http://beholder:8080/;
+        }
+
         location /config {
             proxy_pass http://raziel:8080/config;
         }
