--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,9 +11,24 @@ services:
   #   networks:
   #     - m3
 
+  # sqlserver:
+  #   image: mcr.microsoft.com/mssql/server
+  #   # image: mcr.microsoft.com/azure-sql-edge
+  #   restart: always
+  #   ports:
+  #     - "1433:1433"
+  #   environment: 
+  #     - ACCEPT_EULA=Y
+  #     - MSSQL_PID=Express
+  #     - SA_PASSWORD=${ANNOSAURUS_DATABASE_PASSWORD}
+  #   volumes:
+  #     - ${M3_HOST_DIR}/sqlserver:/var/opt/mssql
+  #   networks: 
+  #     - m3
+
   # Postgres:14.5 (latest) does not work. See https://github.com/mbari-org/m3-quickstart/issues/8#issuecomment-1260233442
   postgres:
-    image: postgres:14.2
+    image: postgres:14
     restart: always
     ports:
       - "5432:5432"
