Updated everthing to latest and greatest

--- a/docker/nginx/conf/nginx.conf
+++ b/docker/nginx/conf/nginx.conf
@@ -63,33 +63,33 @@ http {
             autoindex_exact_size off;
         }
 
-        location /accounts {
+        location /users {
             # resolver 134.89.10.32; 
             # rewrite ^ $request_uri;
             # rewrite ^/accounts/(.*) $1 break;
             # return 400; #if the second rewrite won't match
-            proxy_pass http://vars-user-server:8080/accounts;
+            proxy_pass http://vars-user-server:8080/users;
         }
 
-        location /anno {
-            proxy_pass http://annosaurus:8080/anno;
+        location /anno/ {
+            proxy_pass http://annosaurus:8080/;
         }
 
-        location /capture {
+        location /capture/ {
             proxy_pass http://beholder:8080/;
         }
 
-        location /config {
-            proxy_pass http://raziel:8080/config;
+        location /config/ {
+            proxy_pass http://raziel:8080/config/;
         }
 
 
-        location /panoptes {
-            proxy_pass http://panoptes:8080/panoptes;
+        location /panoptes/ {
+            proxy_pass http://panoptes:8080/panoptes/;
         }
 
-        location /kb {
-            proxy_pass http://vars-kb-server:8080/kb;
+        location /kb/ {
+            proxy_pass http://vars-kb-server:8080/kb/;
         }
 
         location /references/ {
@@ -104,7 +104,7 @@ http {
             # rewrite ^ $request_uri;
             # rewrite ^/vam/(.*) $1 break;
             # return 400; #if the second rewrite won't match
-            proxy_pass http://vampire-squid:8080/vam/;
+            proxy_pass http://vampire-squid:8080/;
             # proxy_redirect     off;
         }
 
