--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,7 +28,7 @@ services:
 
   # Postgres:14.5 (latest) does not work. See https://github.com/mbari-org/m3-quickstart/issues/8#issuecomment-1260233442
   postgres:
-    image: postgres:14
+    image: postgres:16
     restart: always
     ports:
       - "5432:5432"
@@ -71,22 +71,19 @@ services:
       - "${ANNOSAURUS_PORT}:8080"
       - "${ANNOSAURUS_ZEROMQ_PORT}:5563"
     environment:
-      - AUTHENTICATION_SERVICE=org.mbari.vars.annotation.auth.BasicJwtService
       - BASICJWT_CLIENT_SECRET=${ANNOSAURUS_CLIENT_SECRET}
       - BASICJWT_ISSUER=${JWT_ISSUER}
       - BASICJWT_SIGNING_SECRET=${ANNOSAURUS_SIGNING_SECRET}
-      - DATABASE_ENVIRONMENT=production
+      - DATABASE_DRIVER=${ANNOSAURUS_DATABASE_DRIVER}
       - DATABASE_LOG_LEVEL=FINE
-      - HTTP_CONTEXT_PATH=${ANNOSAURUS_HTTP_CONTEXT_PATH}
+      - DATABASE_NAME=${ANNOSAURUS_DATABASE_NAME}
+      - DATABASE_PASSWORD=${ANNOSAURUS_DATABASE_PASSWORD}
+      - DATABASE_URL=${ANNOSAURUS_DATABASE_URL}
+      - DATABASE_USER=${ANNOSAURUS_DATABASE_USER}
       - LOGBACK_LEVEL=${LOGBACK_LEVEL}
       - MESSAGING_ZEROMQ_ENABLE=${ANNOSAURUS_ZEROMQ_ENABLE}
       - MESSAGING_ZEROMQ_PORT=${ANNOSAURUS_ZEROMQ_PORT}
       - MESSAGING_ZEROMQ_TOPIC=${ANNOSAURUS_ZEROMQ_TOPIC}
-      - ORG_MBARI_VARS_ANNOTATION_DATABASE_PRODUCTION_DRIVER=${ANNOSAURUS_DATABASE_DRIVER}
-      - ORG_MBARI_VARS_ANNOTATION_DATABASE_PRODUCTION_NAME=${ANNOSAURUS_DATABASE_NAME}
-      - ORG_MBARI_VARS_ANNOTATION_DATABASE_PRODUCTION_PASSWORD=${ANNOSAURUS_DATABASE_PASSWORD}
-      - ORG_MBARI_VARS_ANNOTATION_DATABASE_PRODUCTION_URL=${ANNOSAURUS_DATABASE_URL}
-      - ORG_MBARI_VARS_ANNOTATION_DATABASE_PRODUCTION_USER=${ANNOSAURUS_DATABASE_USER}
     depends_on:
       - postgres
     networks:
@@ -119,18 +116,14 @@ services:
     ports:
       - "${VAMPIRESQUID_PORT}:8080"
     environment:
-      - AUTHENTICATION_SERVICE=org.mbari.vars.vam.auth.BasicJwtService
       - BASICJWT_CLIENT_SECRET=${VAMPIRESQUID_CLIENT_SECRET}
       - BASICJWT_ISSUER=${JWT_ISSUER}
       - BASICJWT_SIGNING_SECRET=${VAMPIRESQUID_SIGNING_SECRET}
-      - DATABASE_ENVIRONMENT=production
-      - HTTP_CONTEXT_PATH=${VAMPIRESQUID_HTTP_CONTEXT_PATH}
-      - LOGBACK_LEVEL=${LOGBACK_LEVEL}
-      - ORG_MBARI_VARS_VAM_DATABASE_PRODUCTION_DRIVER=${VAMPIRESQUID_DATABASE_DRIVER}
-      - ORG_MBARI_VARS_VAM_DATABASE_PRODUCTION_NAME=${VAMPIRESQUID_DATABASE_NAME}
-      - ORG_MBARI_VARS_VAM_DATABASE_PRODUCTION_PASSWORD=${VAMPIRESQUID_DATABASE_PASSWORD}
-      - ORG_MBARI_VARS_VAM_DATABASE_PRODUCTION_URL=${VAMPIRESQUID_DATABASE_URL}
-      - ORG_MBARI_VARS_VAM_DATABASE_PRODUCTION_USER=${VAMPIRESQUID_DATABASE_USER}
+      - DATABASE_DRIVER=${VAMPIRESQUID_DATABASE_DRIVER}
+      - DATABASE_NAME=${VAMPIRESQUID_DATABASE_NAME}
+      - DATABASE_PASSWORD=${VAMPIRESQUID_DATABASE_PASSWORD}
+      - DATABASE_URL=${VAMPIRESQUID_DATABASE_URL}
+      - DATABASE_USER=${VAMPIRESQUID_DATABASE_USER}
     depends_on:
       - postgres
     networks:
@@ -253,6 +246,32 @@ services:
       - vampire-squid
       - vars-kb-server
       - vars-user-server
+
+  prometheus:
+    image: prom/prometheus
+    restart: always
+    ports:
+      - "9090:9090"
+    volumes:
+      - ${BASE_DIR}/docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ${M3_HOST_DIR}/prometheus:/prometheus
+    networks:
+      - m3
+    depends_on:
+      - annosaurus
+      - vampire-squid
+
+  grafana:
+    image: grafana/grafana-enterprise
+    restart: always
+    ports:
+      - "3000:3000"
+    volumes:
+      - ${M3_HOST_DIR}/grafana:/var/lib/grafana
+    networks: 
+      - m3
+    depends_on:
+      - prometheus
 
 networks:
   m3:
