mbari-org/oni#1 - working on oni integration

--- a/docker/nginx/conf/nginx.conf
+++ b/docker/nginx/conf/nginx.conf
@@ -68,7 +68,7 @@ http {
             # rewrite ^ $request_uri;
             # rewrite ^/accounts/(.*) $1 break;
             # return 400; #if the second rewrite won't match
-            proxy_pass http://vars-user-server:8080/users;
+            proxy_pass http://oni:8080/;
         }
 
         location /anno/ {
@@ -89,7 +89,7 @@ http {
         }
 
         location /kb/ {
-            proxy_pass http://vars-kb-server:8080/kb/;
+            proxy_pass http://oni:8080/;
         }
 
         location /references/ {
