All appears to be working with VARS annotation

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -243,17 +243,15 @@ services:
       - CHARYBDIS_INTERNAL_URL=${CHARYBDIS_INTERNAL_URL}
       - CHARYBDIS_URL=${CHARYBDIS_URL}
       - LOGBACK_LEVEL=${LOGBACK_LEVEL}
+      - ONI_INTERNAL_URL=${VARS_USER_SERVER_INTERNAL_URL}
+      - ONI_SECRET=${VARS_USER_CLIENT_SECRET}
+      - ONI_URL=${VARS_USER_SERVER_URL}
       - PANOPTES_INTERNAL_URL=${PANOPTES_INTERNAL_URL}
       - PANOPTES_SECRET=${PANOPTES_CLIENT_SECRET}
       - PANOPTES_URL=${PANOPTES_URL}
       - VAMPIRE_SQUID_INTERNAL_URL=${VAMPIRE_SQUID_INTERNAL_URL}
       - VAMPIRE_SQUID_SECRET=${VAMPIRESQUID_CLIENT_SECRET}
       - VAMPIRE_SQUID_URL=${VAMPIRE_SQUID_URL}
-      - VARS_KB_SERVER_INTERNAL_URL=${VARS_KB_SERVER_INTERNAL_URL}
-      - VARS_KB_SERVER_URL=${VARS_KB_SERVER_URL}
-      - VARS_USER_SERVER_INTERNAL_URL=${VARS_USER_SERVER_INTERNAL_URL}
-      - VARS_USER_SERVER_SECRET=${VARS_USER_CLIENT_SECRET}
-      - VARS_USER_SERVER_URL=${VARS_USER_SERVER_URL}
     networks:
       - m3
     depends_on:
