--- a/docker/nginx/conf/nginx.conf
+++ b/docker/nginx/conf/nginx.conf
@@ -63,7 +63,7 @@ http {
             autoindex_exact_size off;
         }
 
-        location /users {
+        location /users/ {
             # resolver 134.89.10.32; 
             # rewrite ^ $request_uri;
             # rewrite ^/accounts/(.*) $1 break;
