--- a/docker/nginx/conf/nginx.conf
+++ b/docker/nginx/conf/nginx.conf
@@ -63,13 +63,13 @@ http {
             autoindex_exact_size off;
         }
 
-        location /users/ {
-            # resolver 134.89.10.32; 
-            # rewrite ^ $request_uri;
-            # rewrite ^/accounts/(.*) $1 break;
-            # return 400; #if the second rewrite won't match
-            proxy_pass http://oni:8080/;
-        }
+        # location /users/ {
+        #     # resolver 134.89.10.32; 
+        #     # rewrite ^ $request_uri;
+        #     # rewrite ^/accounts/(.*) $1 break;
+        #     # return 400; #if the second rewrite won't match
+        #     proxy_pass http://oni:8080/;
+        # }
 
         location /anno/ {
             proxy_pass http://annosaurus:8080/;
