--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -120,66 +120,21 @@ services:
     image: mbari/oni
     restart: always
     ports:
-      - "${VARS_KBSERVER_PORT}:8080"
+      - "${ONI_PORT}:8080"
     environment:
-      - BASICJWT_CLIENT_SECRET=${VARS_USER_CLIENT_SECRET}
+      - BASICJWT_CLIENT_SECRET=${ONI_CLIENT_SECRET}
       - BASICJWT_ISSUER=${JWT_ISSUER}
-      - BASICJWT_SIGNING_SECRET=${VARS_USER_SIGNING_SECRET}
+      - BASICJWT_SIGNING_SECRET=${ONI_SIGNING_SECRET}
       - LOGBACK_LEVEL=${LOGBACK_LEVEL}
       - DATABASE_LOGLEVEL=${LOGBACK_LEVEL}
-      - DATABASE_DRIVER=${VARS_KB_DATABASE_DRIVER}
-      - DATABASE_PASSWORD=${VARS_KB_DATABASE_PASSWORD}
-      - DATABASE_URL=${VARS_KB_DATABASE_URL}
-      - DATABASE_USER=${VARS_KB_DATABASE_USER}
+      - DATABASE_DRIVER=${ONI_DATABASE_DRIVER}
+      - DATABASE_PASSWORD=${ONI_DATABASE_PASSWORD}
+      - DATABASE_URL=${ONI_DATABASE_URL}
+      - DATABASE_USER=${ONI_DATABASE_USER}
     depends_on:
       - postgres
     networks:
       - m3
-
-  # vars-kb-server:
-  #   image: mbari/vars-kb-server
-  #   restart: always
-  #   ports:
-  #     - "${VARS_KBSERVER_PORT}:8080"
-  #   environment:
-  #     - DATABASE_ALLOW_INIT=${VARS_KBSERVER_DATABASE_ALLOW_INIT}
-  #     - DATABASE_ENVIRONMENT=production
-  #     - HTTP_CONTEXT_PATH=${VARS_KBSERVER_HTTP_CONTEXT_PATH}
-  #     - LOGBACK_LEVEL=${LOGBACK_LEVEL}
-  #     - ORG_MBARI_VARS_KBSERVER_DATABASE_PRODUCTION_DRIVER=${VARS_KB_DATABASE_DRIVER}
-  #     - ORG_MBARI_VARS_KBSERVER_DATABASE_PRODUCTION_HIKARI_TEST=${VARS_KB_DATABASE_HIKARI_TEST}
-  #     - ORG_MBARI_VARS_KBSERVER_DATABASE_PRODUCTION_NAME=${VARS_KB_DATABASE_NAME}
-  #     - ORG_MBARI_VARS_KBSERVER_DATABASE_PRODUCTION_PASSWORD=${VARS_KB_DATABASE_PASSWORD}
-  #     - ORG_MBARI_VARS_KBSERVER_DATABASE_PRODUCTION_URL=${VARS_KB_DATABASE_URL}
-  #     - ORG_MBARI_VARS_KBSERVER_DATABASE_PRODUCTION_USER=${VARS_KB_DATABASE_USER}
-  #   depends_on:
-  #     - postgres
-  #   networks:
-  #     - m3
-
-  # vars-user-server:
-  #   image: mbari/vars-user-server
-  #   restart: always
-  #   ports:
-  #     - "${VARS_USER_PORT}:8080"
-  #   environment:
-  #     - AUTHENTICATION_SERVICE=org.mbari.vars.userserver.auth.BasicJwtService
-  #     - BASICJWT_CLIENT_SECRET=${VARS_USER_CLIENT_SECRET}
-  #     - BASICJWT_ISSUER=${JWT_ISSUER}
-  #     - BASICJWT_SIGNING_SECRET=${VARS_USER_SIGNING_SECRET}
-  #     - DATABASE_ENVIRONMENT=production
-  #     - HTTP_CONTEXT_PATH=${VARS_USER_HTTP_CONTEXT_PATH}
-  #     - LOGBACK_LEVEL=${LOGBACK_LEVEL}
-  #     - ORG_MBARI_VARS_KB_DATABASE_PRODUCTION_DRIVER=${VARS_KB_DATABASE_DRIVER}
-  #     - ORG_MBARI_VARS_KB_DATABASE_PRODUCTION_HIKARI_TEST=${VARS_KB_DATABASE_HIKARI_TEST}
-  #     - ORG_MBARI_VARS_KB_DATABASE_PRODUCTION_NAME=${VARS_KB_DATABASE_NAME}
-  #     - ORG_MBARI_VARS_KB_DATABASE_PRODUCTION_PASSWORD=${VARS_KB_DATABASE_PASSWORD}
-  #     - ORG_MBARI_VARS_KB_DATABASE_PRODUCTION_URL=${VARS_KB_DATABASE_URL}
-  #     - ORG_MBARI_VARS_KB_DATABASE_PRODUCTION_USER=${VARS_KB_DATABASE_USER}
-  #   depends_on:
-  #     - postgres
-  #   networks:
-  #     - m3
 
   beholder:
     image: mbari/beholder
@@ -232,8 +187,8 @@ services:
       - CHARYBDIS_INTERNAL_URL=${CHARYBDIS_INTERNAL_URL}
       - CHARYBDIS_URL=${CHARYBDIS_URL}
       - LOGBACK_LEVEL=${LOGBACK_LEVEL}
-      - ONI_INTERNAL_URL=${VARS_USER_SERVER_INTERNAL_URL}
-      - ONI_SECRET=${VARS_USER_CLIENT_SECRET}
+      - ONI_INTERNAL_URL=${ONI_INTERNAL_URL}
+      - ONI_SECRET=${ONI_CLIENT_SECRET}
       - ONI_URL=${VARS_USER_SERVER_URL}
       - PANOPTES_INTERNAL_URL=${PANOPTES_INTERNAL_URL}
       - PANOPTES_SECRET=${PANOPTES_CLIENT_SECRET}
