Fix CORS support

--- a/docker/nginx/conf/nginx.conf
+++ b/docker/nginx/conf/nginx.conf
@@ -56,6 +56,8 @@ http {
 
         add_header Access-Control-Allow-Origin *;
         add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-Api-Key,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
+        add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
 
         location / {
             root /usr/local/nginx/html;
@@ -73,6 +75,13 @@ http {
 
         location /anno/ {
             proxy_pass http://annosaurus:8080/;
+
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
         }
 
         location /capture/ {
@@ -81,6 +90,13 @@ http {
 
         location /config/ {
             proxy_pass http://raziel:8080/config/;
+
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
         }
 
 
@@ -90,11 +106,27 @@ http {
 
         location /kb/ {
             proxy_pass http://oni:8080/;
+
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
         }
 
         location /references/ {
             proxy_pass http://charybdis:8080/;
+
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
         }
+
+
 
         # Don't mess with the /vam section. It took a lot of sweat and tears to 
         # make it work.
@@ -106,6 +138,13 @@ http {
             # return 400; #if the second rewrite won't match
             proxy_pass http://vampire-squid:8080/;
             # proxy_redirect     off;
+
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
         }
 
         error_page 404 /404.html;
