Fixed CORS. Added CORS test.

--- a/docker/nginx/conf/nginx.conf
+++ b/docker/nginx/conf/nginx.conf
@@ -54,11 +54,6 @@ http {
         listen       [::]:80 default_server;
         server_name  _;
 
-        add_header Access-Control-Allow-Origin *;
-        add_header 'Access-Control-Allow-Credentials' 'true';
-        add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-Api-Key,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
-        add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
-
         location / {
             root /usr/local/nginx/html;
             autoindex on;
@@ -74,29 +69,82 @@ http {
         # }
 
         location /anno/ {
-            proxy_pass http://annosaurus:8080/;
 
+            # Handle CORS preflight requests (OPTIONS)
             if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
                 add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain charset=UTF-8';
                 add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
                 return 204;
             }
+
+            # Handle actual requests
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
+            
+            # Proxy the request to your backend
+            proxy_pass http://annosaurus:8080/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
         }
 
         location /capture/ {
+
+            # Handle CORS preflight requests (OPTIONS)
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                return 204;
+            }
+
+            # Handle actual requests
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
+            
+            # Proxy the request to your backend
             proxy_pass http://beholder:8080/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location /config/ {
-            proxy_pass http://raziel:8080/config/;
 
+            # Handle CORS preflight requests (OPTIONS)
             if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
                 add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain charset=UTF-8';
                 add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
                 return 204;
             }
+
+            # Handle actual requests
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
+            
+            # Proxy the request to your backend
+            proxy_pass http://raziel:8080/config/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
 
@@ -105,25 +153,55 @@ http {
         }
 
         location /kb/ {
-            proxy_pass http://oni:8080/;
 
+            # Handle CORS preflight requests (OPTIONS)
             if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
                 add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain charset=UTF-8';
                 add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
                 return 204;
             }
+
+            # Handle actual requests
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
+            
+            # Proxy the request to your backend
+            proxy_pass http://oni:8080/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location /references/ {
-            proxy_pass http://charybdis:8080/;
 
+            # Handle CORS preflight requests (OPTIONS)
             if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
                 add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain charset=UTF-8';
                 add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
                 return 204;
             }
+
+            # Handle actual requests
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
+            
+            # Proxy the request to your backend
+            proxy_pass http://charybdis:8080/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
 
@@ -136,15 +214,29 @@ http {
             # rewrite ^ $request_uri;
             # rewrite ^/vam/(.*) $1 break;
             # return 400; #if the second rewrite won't match
-            proxy_pass http://vampire-squid:8080/;
-            # proxy_redirect     off;
-
+            
+            # Handle CORS preflight requests (OPTIONS)
             if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
                 add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain charset=UTF-8';
                 add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
                 return 204;
             }
+
+            # Handle actual requests
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
+            
+            # Proxy the request to your backend
+            proxy_pass http://vampire-squid:8080/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         error_page 404 /404.html;
