updated CORS in nginx.conf

--- a/docker/nginx/conf/nginx.conf
+++ b/docker/nginx/conf/nginx.conf
@@ -47,6 +47,8 @@ http {
     include             /usr/local/nginx/conf/mime.types;
     default_type        application/octet-stream;
     
+    proxy_http_version 1.1;
+    proxy_set_header Connection "";
     proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=one:10m max_size=10g inactive=10m use_temp_path=off;
 
     server {
@@ -73,7 +75,7 @@ http {
             # Handle CORS preflight requests (OPTIONS)
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
                 add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Length' 0;
@@ -83,7 +85,7 @@ http {
 
             # Handle actual requests
             add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
             add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
             
             # Proxy the request to your backend
@@ -103,7 +105,7 @@ http {
             # Handle CORS preflight requests (OPTIONS)
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
                 add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Length' 0;
@@ -113,7 +115,7 @@ http {
 
             # Handle actual requests
             add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
             add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
             
             # Proxy the request to your backend
@@ -129,7 +131,7 @@ http {
             # Handle CORS preflight requests (OPTIONS)
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
                 add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Length' 0;
@@ -139,39 +141,11 @@ http {
 
             # Handle actual requests
             add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
             add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
             
             # Proxy the request to your backend
             proxy_pass http://raziel:8080/config/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
-            # Disable cache for CORS preflight
-            expires off;
-        }
-
-
-        location /panoptes/ {
-            # Handle CORS preflight requests (OPTIONS)
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-                add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Length' 0;
-                add_header 'Content-Type' 'text/plain charset=UTF-8';
-                return 204;
-            }
-
-            # Handle actual requests
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-            add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
-
-            proxy_pass http://panoptes:8080/panoptes/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -186,7 +160,7 @@ http {
             # Handle CORS preflight requests (OPTIONS)
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
                 add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Length' 0;
@@ -196,11 +170,39 @@ http {
 
             # Handle actual requests
             add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
             add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
             
             # Proxy the request to your backend
             proxy_pass http://oni:8080/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Disable cache for CORS preflight
+            expires off;
+        }
+
+
+        location /panoptes/ {
+            # Handle CORS preflight requests (OPTIONS)
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
+                add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                return 204;
+            }
+
+            # Handle actual requests
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
+
+            proxy_pass http://panoptes:8080/panoptes/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -215,7 +217,7 @@ http {
             # Handle CORS preflight requests (OPTIONS)
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
                 add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Length' 0;
@@ -225,7 +227,7 @@ http {
 
             # Handle actual requests
             add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
             add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
             
             # Proxy the request to your backend
@@ -253,7 +255,7 @@ http {
             # Handle CORS preflight requests (OPTIONS)
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
                 add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Length' 0;
@@ -263,7 +265,7 @@ http {
 
             # Handle actual requests
             add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH, HEAD';
             add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type, X-Api-Key';
             
             # Proxy the request to your backend
